Finally fix header spacing

--- a/app/assets/stylesheets/stylish-portfolio.css
+++ b/app/assets/stylesheets/stylish-portfolio.css
@@ -31,7 +31,7 @@ body {
 
 .text-vertical-right {
     display: table-cell;
-    margin-right: 25px;
+    /*margin-right: 25px;*/
     text-align: right;
     vertical-align: middle;
 }
@@ -41,7 +41,7 @@ body {
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
-    margin-right: 25px;
+    /*margin-right: 25px;*/
 }
 
 .text-vertical-right h3 {
@@ -49,7 +49,7 @@ body {
     padding: 0;
     font-size: 2.5em;
     font-weight: 350;
-    margin-right: 25px;
+    /*margin-right: 25px;*/
 }
 
 /* Custom Button Styles */
@@ -178,6 +178,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
+    padding: 0 20px;
     background: url(http://i.imgur.com/key0Swc.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
